# LoggerTest

./: CMakeLists.txt
example/: CMakeLists.txt  example.cpp
logLib/: CMakeLists.txt
logLib/include/: CLog.h  HeaderDefine.h  ILog.h
logLib/src/: CLog.cpp  ILog.cpp
spdlogsdk/release/: spdlog.lib
